BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Clinical_Trial_Protocol_BMS__c.object
<CustomObject>
    <description>VPRO - December 2011 - BMS Oncology Requirements &amp; Design: Custom object to store information related to BMS Clinical Trials.</description>
    <fields>
        <fullName>BMS_Protocol_Manager_Email__c</fullName>
        <label>Protocol Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CTP_Source_Country_BMS_CORE__c</fullName>
        <label>CTP_Source_Country_BMS_CORE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_BMS__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_BMS__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Protocol_Distribution_List_BMS__c</fullName>
        <label>Protocol Distribution List</label>
        <type>Email</type>
    </fields>
    <label>Clinical Trial Protocol</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Protocol_Distribution_List_BMS__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Protocol Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clinical Trial Protocols</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>